@@ -22,13 +22,20 @@ import static org.egov.eTreasury.config.ServiceConstants.NO_IDS_FOUND_ERROR;
 
 @Component
 public class IdgenUtil {
-    @Autowired
-    private ObjectMapper mapper;
+
+    private final ObjectMapper mapper;
+
+    private final ServiceRequestRepository restRepo;
+
+    private final PaymentConfiguration configs;
 
     @Autowired
-    private ServiceRequestRepository restRepo;
-    @Autowired
-    private PaymentConfiguration configs;
+    public IdgenUtil(ObjectMapper mapper, ServiceRequestRepository restRepo, PaymentConfiguration configs) {
+        this.mapper = mapper;
+        this.restRepo = restRepo;
+        this.configs = configs;
+    }
+
     public List<String> getIdList(RequestInfo requestInfo, String tenantId, String idName, String idformat,
                                   Integer count) {
         List<IdRequest> reqList = new ArrayList<>();
@@ -47,6 +54,6 @@ public class IdgenUtil {
         if (CollectionUtils.isEmpty(idResponses))
             throw new CustomException(IDGEN_ERROR, NO_IDS_FOUND_ERROR);
 
-        return idResponses.stream().map(IdResponse::getId).collect(Collectors.toList());
+        return idResponses.stream().map(IdResponse::getId).toList();
     }
 }
